formulaire-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formulaire
  labels:
    app: formulaire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formulaire
  template:
    metadata:
      labels:
        app: formulaire
    spec:
      containers:
        - name: formulaire
          image: image-registry.openshift-image-registry.svc:5000/hasnahatti70-dev/formulaire:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: formulaire
  labels:
    app: formulaire
spec:
  selector:
    app: formulaire
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: formulaire
spec:
  to:
    kind: Service
    name: formulaire
  port:
    targetPort: 80
  tls:
    termination: edge
